--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
     </nav>
 
     <main>
-        <section id="hero" class="py-24 md:py-40 bg-gradient-to-br from-sky-50 via-slate-50 to-stone-50"> 
+        <section id="hero" class="pt-24 pb-12 md:pt-40 md:pb-20 bg-gradient-to-br from-sky-50 via-slate-50 to-stone-50"> 
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
                 <h1 class="text-5xl md:text-7xl font-extrabold text-gray-900 leading-tight">
-                    <span class="block">联结<span class="hero-gradient-text">哲学智慧</span>与<span class="hero-gradient-text">技术实践</span></span>
+                    <span class="block">联结<span class="hero-gradient-text">哲学思辨</span>与<span class="hero-gradient-text">技术实践</span></span>
                     <span class="block text-4xl md:text-6xl mt-3">探索AI伦理与安全之路</span>
                 </h1>
                 <p class="mt-10 max-w-3xl mx-auto text-lg md:text-xl text-gray-700">
-                    我是杨文宇，一名中国人民大学哲学院的2024级科学技术哲学专业硕士生研究生。本网页旨在系统性地呈现我的职业愿景：以自身哲学背景的理论思辨为根基，结合在小米等团队参与大模型研发的实践经验，致力于在AI伦理与安全领域进行开创性研究，为构建负责任、可信赖的智能未来贡献力量。
+                    我是杨文宇，一名中国人民大学哲学院的2024级科学技术哲学专业硕士研究生。本页面为《哲学专业研究生职业生涯规划》课程作业，旨在系统且直观地呈现我的职业愿景：以自身哲学背景的理论思辨为根基，结合在小米等团队参与大模型研发的实践经验，致力于在AI伦理与安全领域进行开创性研究，为构建负责任、可信赖的智能未来贡献力量。
                 </p>
                 <div class="mt-16 flex justify-center items-center space-x-6 md:space-x-10 text-gray-700">
                     <div class="text-center p-4 bg-white/50 rounded-xl shadow-sm">
@@ -190,7 +190,7 @@
             </div>
         </section>
 
-        <section id="strengths" class="py-24">
+        <section id="strengths" class="pt-12 pb-24">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center mb-20">
                     <h2 class="section-title">我的核心优势</h2>
@@ -199,7 +199,7 @@
                 <div class="grid md:grid-cols-2 gap-10 md:gap-16 items-start"> 
                     <div class="card p-8 md:p-10">
                         <h3 class="text-3xl font-bold mb-6 text-center text-blue-700">学术象牙塔：理论深度</h3>
-                        <p class="text-gray-700 mb-8 text-lg leading-relaxed">我的学术之旅始于对“爱智慧”的纯粹向往，并在持续深耕中逐渐聚焦于科技与社会的交叉地带。优异的学业成绩、多项科研项目经历以及在核心期刊的论文发表，共同筑就了我坚实的理论根基。</p>
+                        <p class="text-gray-700 mb-8 text-lg leading-relaxed">我的学术之旅始于对“爱智慧”的纯粹向往，并在持续深耕中逐渐聚焦于科技与社会（STS）的交叉地带。优异的学业成绩、多项科研项目经历以及在核心期刊的论文发表，共同筑就了我坚实的理论根基。</p>
                         <ul class="space-y-4 text-gray-700 text-md">
                             <li class="flex items-start"><span class="icon-bullet">🎓</span><div><strong>顶尖学府背景:</strong> 本科（东北大学，专业第一）及硕士（中国人民大学，满绩）的系统哲学训练。</div></li>
                             <li class="flex items-start"><span class="icon-bullet">✍️</span><div><strong>丰硕科研成果:</strong> 在《自然辩证法研究》等CSSCI期刊发表论文，并主持并参与多项国家级及省部级科研项目。</div></li>
@@ -214,22 +214,22 @@
                     </div>
                     <div class="card p-8 md:p-10">
                         <h3 class="text-3xl font-bold mb-6 text-center text-green-700">产业炼金炉：实践广度</h3>
-                        <p class="text-gray-700 mb-8 text-lg leading-relaxed">理论学习与实践探索相辅相成。在小米科技担任大模型算法工程师的经历，让我得以深入AI研发核心，将哲学思辨直接应用于价值对齐与模型安全等现实挑战，扮演独特的“哲学工程师”角色。</p>
+                        <p class="text-gray-700 mb-8 text-lg leading-relaxed">理论学习与实践探索相辅相成。在小米科技担任大模型算法工程师的经历，让我得以深入AI研发核心，将哲学思辨直接面向价值对齐与模型安全等现实挑战，扮演独特的“哲学工程师”角色。</p>
                          <ul class="space-y-4 text-gray-700 text-md">
                             <li class="flex items-start"><span class="icon-bullet text-green-500">🤖</span><div><strong>小米核心经验:</strong> 深度参与自研大模型Pre-training-SFT-RL全流程，负责哲学推理增强、价值对齐与政治安全工作。</div></li>
-                            <li class="flex items-start"><span class="icon-bullet text-green-500">🛠️</span><div><strong>全栈技能栈:</strong> 熟悉LLM训练流程、数据工程、模型评估与Prompt工程，并参与算法改进。</div></li>
+                            <li class="flex items-start"><span class="icon-bullet text-green-500">🛠️</span><div><strong>全栈工程师:</strong> 熟悉LLM训练流程、数据工程、模型评估与Prompt工程，并参与算法改进。</div></li>
                             <li class="flex items-start"><span class="icon-bullet text-green-500">🌐</span><div><strong>多元实践者:</strong> 兼具媒体编辑、政务实习、签约小说作者、知识博主等多重身份，展现卓越的沟通与适应能力。</div></li>
                         </ul>
                         <div class="mt-10 bg-green-50 p-6 rounded-lg border border-green-200">
                             <h4 class="text-xl font-semibold text-center mb-4 text-green-800">关键实践贡献</h4>
-                             <p class="text-md text-green-700 leading-relaxed">在小米，我不仅是理论的旁观者，更是实践的参与者。通过数据工程、模型评估与算法改进，我为Mimo大模型的安全能力提升做出了实质性贡献，例如：构建了覆盖十多个领域的3k政治知识benchmark，并通过RLHF训练，将模型的政治安全能力提升至国内第一梯队水平。</p>
+                             <p class="text-md text-green-700 leading-relaxed">在小米，我不仅是理论的旁观者，更是实践的参与者。通过数据工程、模型评估与算法改进，我为Mimo大模型的安全能力提升做出了实质性贡献，例如：构建了覆盖十多个领域的3K量级政治知识Benchmark，并通过RLHF训练，将模型的政治安全能力提升至国内第一梯队水平。</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="blueprint" class="py-24 bg-slate-50"> 
+        <section id="blueprint" class="pt-12 pb-24 bg-slate-50"> 
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center mb-16">
                     <h2 class="section-title">我的双轨蓝图</h2>
@@ -251,7 +251,7 @@
                         <div class="grid md:grid-cols-2 gap-8 items-stretch"> 
                             <div class="card p-8">
                                 <h3 class="text-2xl font-bold text-blue-700 mb-5">路径一：深耕学术，成为思想引领者</h3>
-                                 <p class="text-gray-700 mb-6 leading-relaxed">这是我的首要目标。我渴望在大学的殿堂里，对AI的根本性伦理问题进行系统、原创的研究，培养下一代具备批判性思维的AI人才，并通过思想的力量影响社会。</p>
+                                 <p class="text-gray-700 mb-6 leading-relaxed">这是我的首要目标。我渴望在大学的殿堂里，对AI伦理问题进行系统、切实的研究，培养下一代具备批判性思维的AI伦理人才，并通过思想的力量影响社会。</p>
                                  <div class="space-y-5">
                                     <div>
                                         <h4 class="font-semibold text-lg text-gray-800">长期目标</h4>
@@ -291,7 +291,7 @@
                                  <div class="space-y-5">
                                     <div>
                                         <h4 class="font-semibold text-lg text-gray-800">长期目标</h4>
-                                        <p class="text-gray-600 mt-1">成为顶尖科技公司AI伦理/安全/治理部门的领导者或核心专家。</p>
+                                        <p class="text-gray-600 mt-1">成为大型科技公司AI伦理/安全/治理部门的领导者或核心专家。</p>
                                     </div>
                                     <div>
                                         <h4 class="font-semibold text-lg text-gray-800">环境机遇</h4>
@@ -322,11 +322,11 @@
             </div>
         </section>
         
-        <section id="strategy" class="py-24">
+        <section id="strategy" class="pt-12 pb-24">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center mb-20">
                     <h2 class="section-title">我的行动方略</h2>
-                    <p class="section-subtitle mt-6 max-w-3xl mx-auto">千里之行，始于足下。我已将宏伟蓝图分解为可执行、可衡量的具体步骤，并制定了清晰的时间表。</p>
+                    <p class="section-subtitle mt-6 max-w-3xl mx-auto">千里之行，始于足下。我已将职业发展蓝图分解为可执行、可衡量的具体步骤，并制定了清晰的时间表。</p>
                 </div>
 
                 <div class="relative max-w-3xl mx-auto"> 
@@ -373,7 +373,7 @@
                                 <hr class="my-6 border-gray-300">
                                 <h4 class="text-xl font-semibold text-gray-800 mb-4">产业路径 (备选)：</h4>
                                 <ul class="space-y-4 text-gray-700 text-md">
-                                     <li><strong class="text-green-700">专业领导力：</strong>成为顶尖科技公司AI伦理/安全/治理部门的领导者或核心专家。</li>
+                                     <li><strong class="text-green-700">专业领导力：</strong>成为大型科技公司AI伦理/安全/治理部门的领导者或核心专家。</li>
                                      <li><strong class="text-green-700">战略制定：</strong>主导制定公司级AI伦理战略与安全规范，推动负责任AI理念落地。</li>
                                      <li><strong class="text-green-700">行业影响力：</strong>积极参与行业标准制定和公共对话，提升企业及行业AI治理水平。</li>
                                 </ul>
@@ -384,7 +384,7 @@
             </div>
         </section>
 
-        <section id="risks" class="py-24 bg-slate-50">
+        <section id="risks" class="pt-12 pb-24 bg-slate-50">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center mb-20">
                     <h2 class="section-title">我的风险棋局</h2>
